Float box: align items to prevent image stretch in safari

--- a/designsystem-dev/css/main.css
+++ b/designsystem-dev/css/main.css
@@ -1221,6 +1221,7 @@ input.mod_quiz-prev-nav.btn[type="submit"]:first-child a.mod_quiz-prev-nav.btn-s
 
 .float-box {
   display: flex;
+  align-items: flex-start;
   margin-bottom: 1.5rem; }
   .float-box.img-right .filter-ally-wrapper,
   .float-box.img-right > img,
